# Cloud

./: .pre-commit-config.yaml  pyproject.toml  pytest.ini  ruff.toml
migrations/: env.py
migrations/versions/: 17c25419fb92_default_subscription.py  c7270f8e02d9_initial.py
src/: config.py  exceptions.py  main.py  middlewares.py
src/database/: database.py
src/database/models/: FileModel.py  SubscriptionModel.py  UserModel.py
src/database/schemas/: FileSchemas.py  UserSchemas.py
src/repositories/: BaseRepository.py  FileRepository.py  UserRepository.py
src/routes/: FileRouter.py  UserRouter.py
src/services/: BaseService.py  FileService.py  UserService.py
src/utils/: TokenService.py  s3_client.py
tests/: conftest.py
tests/mocks/: mock_files.json  mock_subscriptions.json  mock_users.json
tests/unit_tests/: test_file.py  test_user.py
