[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["Vladislav <barabayne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
ruff = "^0.7.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
